Fix button text wrapping to next line
Bootstrap removed white-space nowrap from buttons in v4.2.1,
causing at least one bug, so this commit re-adds that style
to all buttons

--- a/app/assets/stylesheets/framework/buttons.scss
+++ b/app/assets/stylesheets/framework/buttons.scss
@@ -139,6 +139,7 @@
   @include btn-white;
 
   color: $gl-text-color;
+  white-space: nowrap;
 
   &:focus:active {
     outline: 0;
